--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -678,8 +678,15 @@ a[id]:not([href]):target + section .target-indicator {
 
 /* ----------- say what? --------------- */
 .say-what {
-    margin: 32px 0 0;
+    margin: 0;
+    padding-top: 15px;
     padding-bottom: 0;
+}
+@media (min-width: 576px) {
+    .say-what {
+        margin: 32px 0 0;
+        padding-top: 5px;
+    }
 }
 
 .say-what__container {
@@ -691,6 +698,10 @@ a[id]:not([href]):target + section .target-indicator {
     .say-what__container {
         padding-bottom: 80vw;
         background-size: contain;
+        background-position-x: calc(100% - 5px);
+    }
+    .debug .say-what__container {
+        padding-bottom: 254px;
     }
 }
 @media (min-width: 576px) and (max-width: 991px) {
@@ -701,34 +712,49 @@ a[id]:not([href]):target + section .target-indicator {
 
 .say-what__title {
     font-size: 48px;
-    line-height: 48px;
-    margin-bottom: 46px;
-    padding-left: 26px;
+    line-height: 36px;
+    margin-bottom: 24px;
+}
+@media (min-width: 576px) {
+    .say-what__title {
+        line-height: 48px;
+        margin-bottom: 46px;
+        padding-left: 26px;
+    }
+}
+@media (max-width: 575px) {
+    .say-what__title {
+        font-size: 26px;
+    }
 }
 
 .say-what__text {
     font-weight: 500;
-    line-height: 24px;
-    margin-bottom: 23px;
-    padding-left: 26px;
+    line-height: 20px;
+    margin-bottom: 19px;
+}
+@media (min-width: 576px) {
+    .say-what__text {
+        line-height: 24px;
+        margin-bottom: 23px;
+        padding-left: 26px;
+    }
 }
 
 .say-what__text strong {
     font-size: 18px;
 }
 
-@media (max-width: 575px) {
-    .say-what__title {
-        font-size: 26px;
-        line-height: 36px;
-    }
-}
-
 /* ------------ how to ----------------- */
 .how-to {
     background: linear-gradient(180deg, var(--base-bg-light) 0%, #fff 60%, #fff 100%), #fff;
     margin-bottom: 75px;
-    padding-top: 80px;
+    padding-top: 21px;
+}
+@media (min-width: 576px) {
+    .how-to {
+        padding-top: 80px;
+    }
 }
 
 .debug .how-to {
@@ -736,42 +762,57 @@ a[id]:not([href]):target + section .target-indicator {
 }
 
 .how-to__title {
-    line-height: 85px;
-    font-size: 48px;
-    padding-left: 26px;
+    font-size: 26px;
+    line-height: 36px;
 }
-
-@media (max-width: 575px) {
+@media (min-width: 576px) {
     .how-to__title {
-        font-size: 26px;
-        line-height: 36px;
+        line-height: 85px;
+        font-size: 48px;
+        padding-left: 26px;
     }
 }
-
 .how-to-prepare {
-    padding: 40px 40px 45px 0;
+    padding: 13px 10px 0;
+}
+@media (min-width: 576px) {
+    .how-to-prepare {
+        padding: 40px 40px 45px 0;
+    }
 }
 
 .how-to-prepare__highlight {
     background-color: #FFD540;
-    border-radius: var(--info-box-radius);
-    font-size: 32px;
-    line-height: 55px;
-    margin-bottom: 24px;
+    font-size: 14px;
+    line-height: 31px;
+    border-radius: 2px;
     text-align: center;
+    margin-bottom: 17px;
 }
-
-@media (max-width: 575px) {
+@media (min-width: 576px) {
     .how-to-prepare__highlight {
-        font-size: 14px;
-        line-height: 20px;
+        border-radius: var(--info-box-radius);
+        font-size: 32px;
+        line-height: 55px;
+        margin-bottom: 24px;
     }
 }
 
 .how-to-prepare__text {
-    line-height: 24px;
-    padding-left: 16px;
-    margin-bottom: 24px;
+    padding-left: 6px;
+    padding-right: 6px;
+    font-weight: 500;
+    line-height: 20px;
+    margin-bottom: 20px;
+}
+@media (min-width: 576px) {
+    .how-to-prepare__text {
+        line-height: 24px;
+        padding-left: 16px;
+        padding-right: 0;
+        font-weight: 600;
+        margin-bottom: 24px;
+    }
 }
 
 .how-to-login,
